add create account functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
                 <input class="w-80 px-3 py-2 outline-none bg-transparent border-2 border-zinc-800 rounded-md" type="text" name="username" placeholder="username">
                 <input class="w-80 px-3 py-2 outline-none bg-transparent border-2 border-zinc-800 rounded-md" type="text" name="email" placeholder="email">
                 <input class="w-80 px-3 py-2 outline-none bg-transparent border-2 border-zinc-800 rounded-md" type="text" name="password" placeholder="password">
-                <input class="w-80 px-3 py-2 outline-none bg-transparent border-2 border-zinc-800 rounded-md" type="text" name="age" placeholder="age">
+                <input class="w-80 px-3 py-2 outline-none bg-transparent border-2 border-zinc-800 rounded-md" type="number" name="age" placeholder="age">
                 <input class="w-80 px-3 py-2 bg-blue-500 rounded-md font-bold mt-4" type="submit" value="Create Account">
             </form>
         </div>
