--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
             <h1 class="text-3xl mb-5 font-bold">Login Your Account</h1>
             <form class="flex flex-col gap-3" action="/login" method="post">
                 <input class="w-80 px-3 py-2 outline-none bg-transparent border-2 border-zinc-800 rounded-md" type="text" name="email" placeholder="email">
-                <input class="w-80 px-3 py-2 outline-none bg-transparent border-2 border-zinc-800 rounded-md" type="text" name="password" placeholder="password">
+                <input class="w-80 px-3 py-2 outline-none bg-transparent border-2 border-zinc-800 rounded-md" type="password" name="password" placeholder="password">
                 <input class="w-80 px-3 py-2 bg-blue-500 rounded-md font-bold mt-4" type="submit" value="Login">
             </form>
         </div>
