--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,7 +9,32 @@
   </head>
   <body>
         <div class="w-full min-h-screen bg-zinc-900 text-white p-10">
-            <h1 class="text-3xl mb-5 font-bold">Hello, <%= user.name.charAt(0).toUpperCase() + user.name.slice(1)%></h1>
+            <div class="flex justify-end">
+                <a class="bg-red-500 text-sm rounded-md px-2 py-1" href="/logout">Logout</a>
+            </div>
+            
+            <h1 class="text-3xl mb-5 font-bold"><span class="font-light">Hello</span>, <%= user.name.charAt(0).toUpperCase() + user.name.slice(1)%></h1>
+            <h3 class="mb-3">You can create a post</h3>
+            <form action="/post" method="post">
+                <textarea class="block resize-none bg-transparent rounded-md border-2 border-zinc-800 outline-none p-3 w-1/3" name="content" placeholder="What's on your mind"></textarea>
+                <input class="mt-2 block  bg-blue-500 rounded-md px-2 py-1" type="submit" value="Create new Post">
+            </form>
+            <div class="posts mt-20">
+              <h3 class="text-zinc-500 mb-2">Your posts.</h3>
+              <div class="postContainer">
+                <% user.posts.reverse().forEach((post) => { %>
+                  <div class="post w-1/3 p-4 bg-zinc-800 border-zinc-700 rounded-md mb-2">
+                    <h1 class="text-blue-500 mb-2"><%=user.username%></h1>
+                    <p class="text-sm tracking-tight"><%=post.content%></p>
+                    <div class="btns flex mt-2 gap-3">
+                      <a class="text-blue-500 text-sm" href="">Like</a>
+                      <a class="text-zinc-500 text-sm" href="">edit</a>
+                    </div>
+                  </div>
+              <%  })%>
+              </div>
+            </div>
+
             
           
     <script src="script.js"></script>
